# LumiAI

./: AGENTS.md  CHECKLIST.md  DEPLOY_RAILWAY.md  Dockerfile  Dockerfile.worker  README.md  alembic.ini  docker-compose.yml  pyproject.toml  railway.json
alembic/: env.py
app/: __init__.py  config.py  logging.py  main.py
app/api/: __init__.py  server.py
app/api/routes/: __init__.py  admin.py  health.py  metrics.py
app/db/: __init__.py  base.py  models.py
app/db/repositories/: __init__.py  dialog_repo.py  memory_repo.py  user_repo.py
app/llm/: __init__.py  router.py
app/llm/providers/: __init__.py  base.py  groq.py  nvidia_nim.py  openrouter.py
app/memory/: __init__.py  long_term.py  policies.py  short_term.py
app/services/: __init__.py  chat.py  multimodal.py  reasoning.py  user_settings.py
app/telegram/: __init__.py  bot.py
app/telegram/formatters/: __init__.py  markdown.py
app/telegram/handlers/: __init__.py  commands.py  document.py  errors.py  photo.py  text.py  video.py  voice.py
app/telegram/keyboards/: __init__.py  inline.py
app/telegram/middlewares/: __init__.py  anti_spam.py  rate_limit.py  session.py
app/tests/: __init__.py  conftest.py
app/tests/unit/: test_llm_router.py  test_memory.py  test_services.py  test_tools.py
app/tools/: __init__.py  audio.py  base.py  document.py  rag.py  registry.py  video.py  vision.py  web_search.py
app/utils/: __init__.py  media.py  retry.py  text.py
app/workers/: __init__.py  pool.py  queue.py  tasks.py
core/: __init__.py  exceptions.py  interfaces.py  types.py
