[project]
name = "lumi-ai-bot"
version = "1.0.0"
description = "Production-ready Telegram AI Assistant with multimodal support"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "LumiAI Team"}
]
keywords = ["telegram", "ai", "bot", "llm", "multimodal", "assistant"]

dependencies = [
    "python >=3.12",
    "pydantic >=2.0",
    "pydantic-settings >=2.0",
    "httpx >=0.27.0",
    "aiogram >=3.0.0",
    "fastapi >=0.110.0",
    "uvicorn[standard] >=0.30.0",
    "sqlalchemy[asyncio] >=2.0.0",
    "asyncpg >=0.29.0",
    "redis >=5.0.0",
    "loguru >=0.7.0",
    "arq >=0.25.0",
    "aiofiles >=23.0.0",
    "boto3 >=1.34.0",
]

[project.optional-dependencies]
dev = [
    "pytest >=8.0.0",
    "pytest-asyncio >=0.23.0",
    "pytest-cov >=4.0.0",
    "ruff >=0.3.0",
    "mypy >=1.0.0",
    "pre-commit >=3.0.0",
]

[project.scripts]
lumiai = "app.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["app/tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py312"
line-length = 100
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = false
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = false